# mcproto

./: .gitignore  .pre-commit-config.yaml  README  README.md  action.yml  download_from_repo.py  example_server.py  firehose.py  justfile
.cursor/rules/: python.mdc
_extra/: obj_from_process.py
_extra/docket_firehose/: .dockerignore  base.Dockerfile  compose.yaml  pyproject.toml
_extra/docket_firehose/docker/: base.Dockerfile  worker.Dockerfile
_extra/docket_firehose/docker/firehose/: Dockerfile
_extra/docket_firehose/docker/worker/: Dockerfile
_extra/docket_firehose/src/: worker.py
_extra/docket_firehose/src/docket_firehose/: __init__.py  firehose.py  logging.py  settings.py  utils.py  worker.py
_extra/docket_firehose/src/docket_firehose/tasks/: firehose.py  process.py
_extra/docket_firehose/src/tasks/: __init__.py  firehose.py  process.py
_extra/learning/: Dockerfile  fly.toml  index.html  server.py
clients/python/: README.md  example_server.py  pyproject.toml
clients/python/src/mcproto_client/: __init__.py  _cli.py  _git.py  atproto.py  settings.py
clients/typescript/: bun.lockb  package.json  tsconfig.json
clients/typescript/examples/: example-server.ts
clients/typescript/src/: atproto.ts  cli.ts  client.ts  discovery.ts  git.ts  index.ts
clients/typescript/src/sdk/: index.ts
deep_research/: decentralized_reputation.md
registry/: Dockerfile  fly.toml  index.html  package.json
registry/src/components/: App.tsx
registry/src/components/AttestModal/: index.tsx
registry/src/components/PublisherModal/: index.tsx
registry/src/components/ServerAttestations/: index.tsx
registry/src/components/ServerCard/: index.tsx
registry/src/contexts/: AuthContext.tsx
registry/src/server/: api.ts  attestation.ts  index.ts  mcp_server.ts  server.ts
registry/src/styles/: styles.css
registry/src/types/: index.ts
servers/: fetch.py  maps.py
