[project]
name = "docket-firehose"
version = "0.1.0"
description = "ATProto firehose consumer using docket for task processing"
requires-python = ">=3.12"
dependencies = [
    "atproto",
    "pydocket@git+https://github.com/chrisguidry/docket.git@logs",
    "pydantic-settings",
]

[build-system]
requires = ["uv_build>=0.6.3,<0.7.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff", "ipython"]

[tool.ruff.lint]
extend-select = ["I", "UP"]

