[project]
name = "mcproto-client"
version = "0.1.0"
description = "client to register MCP servers with AT Protocol"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["mcp[cli]", "atproto"]

[project.scripts]
mcproto = "mcproto_client._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I", "UP"]
