[project]
name = "mcproto-client"
version = "0.1.0"
description = "client to register MCP servers with AT Protocol"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]@git+https://github.com/zzstoatzz/python-sdk.git@allow-hooks",
    "atproto",
]


[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ipython", "ruff"]

[project.scripts]
mcproto = "mcproto_client._cli:main"

[build-system]
requires = ["uv_build>=0.6.3,<0.7.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["I", "UP"]
